# packaging_tutorial

./: LICENSE  README.md  setup.cfg
src/example_pkg_Luis_Alfonso_Olivares_Jimenez_MP.egg-info/: PKG-INFO  SOURCES.txt
