[metadata]
# replace with your username:
name = example-pkg-Luis-Alfonso-Olivares-Jimenez_MP
version = 0.0.4
author = Luis Alfonso Olivares Jimenez
author_email = alfonso.cucei.udg@gmail.com
description = Un paquete de prueba
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/LuisOlivaresJ/packaging_tutorial
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
